Task 7 start & Task 6 done

--- a/DL_Assignment04.ipynb
+++ b/DL_Assignment04.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/raffi07/deep-learning-fs23/blob/main/DL_Assignment04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "wE3DlW-e_Dr1"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,8 +180,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloaded datafile student.zip\n",
             "Loaded dataset with 3 samples\n"
@@ -215,17 +215,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "0bUpUAHR_Dr3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "0bUpUAHR_Dr3",
         "outputId": "120ec8db-5913-45c6-d7b7-ad8b9133dc19"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[ 1.        ,  1.        ,  1.        , ...,  1.        ,\n",
@@ -243,8 +242,9 @@
               "         0.50472977,  0.07343336]])"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "GoDHo80J_Dr4"
       },
@@ -322,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "fFndxbf1_CmR"
       },
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "j1gErN4z_Dr4"
       },
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "RSwKiqIc_Dr5"
       },
@@ -434,19 +434,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "Qe8QYVnP_Dr5"
       },
       "outputs": [],
       "source": [
-        "def gradient(X, T, Y, H, Theta):\n",
+        "def gradient(X:numpy.ndarray, T:numpy.ndarray, Y:numpy.ndarray, H:numpy.ndarray, Theta:numpy.ndarray):\n",
         "  W1, W2 = Theta\n",
+        "  \n",
+        "  N = X.shape[0]\n",
         "\n",
         "  # first layer gradient\n",
-        "  g1 = ...\n",
+        "  g1 = (2/N) * (numpy.multiply(numpy.multiply(W2.T @ (Y - T),H), (1-H))) @ X.T\n",
         "  # second layer gradient\n",
-        "  g2 = ...\n",
+        "  g2 = (2/N) * ((Y - T) @ H.T)\n",
         "  \n",
         "  return g1, g2"
       ]
@@ -478,18 +480,18 @@
       },
       "outputs": [],
       "source": [
-        "def gradient_descent(X, T, Theta, B, eta=0.001, mu=None):\n",
+        "def gradient_descent(X:numpy.ndarray, T, Theta, B, eta=0.001, mu=None):\n",
         "  loss_values = []\n",
         "\n",
         "  max_epochs = 10000\n",
-        "  max_batches = ...\n",
+        "  max_batches = B*max_epochs\n",
         "\n",
         "  # iterate over batches\n",
-        "  for x,t in ...:\n",
+        "  for x,t in B:\n",
         "    # compute network output\n",
-        "    ...\n",
+        "    y, h = network(X=x, Theta=Theta)\n",
         "    # compute and append loss\n",
-        "    ...\n",
+        "    loss_values.append()\n",
         "\n",
         "    # compute gradient\n",
         "    ...\n",
@@ -497,7 +499,9 @@
         "    ...\n",
         "    \n",
         "    # apply momentum learning if asked\n",
-        "    ...\n",
+        "    if mu:\n",
+        "      pass\n",
+        "      \n",
         "\n",
         "  # return the obtained loss values at the end\n",
         "  return loss_values"
@@ -700,8 +704,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "interpreter": {
       "hash": "2dd53f8ad749bca69f7250ce75eb4f0def59db5cf79075a9716322ffc58e8a2e"
@@ -721,7 +725,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.11.1"
     },
     "orig_nbformat": 4
   },
