--- a/DL_Assignment04.ipynb
+++ b/DL_Assignment04.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/raffi07/deep-learning-fs23/blob/main/DL_Assignment04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "id": "wE3DlW-e_Dr1"
       },
@@ -170,20 +170,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jaCpzc-l_Dr3",
-        "outputId": "801d71ae-d6c5-47e0-fa26-9f514f7ff2bc"
+        "outputId": "40d6df62-af75-472e-a8e9-8d312a55997b"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Downloaded datafile student.zip\n",
             "Loaded dataset with 3 samples\n"
           ]
         }
@@ -215,16 +214,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
+        "id": "0bUpUAHR_Dr3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "0bUpUAHR_Dr3",
-        "outputId": "120ec8db-5913-45c6-d7b7-ad8b9133dc19"
+        "outputId": "30fc29c4-0311-4681-ee1f-4f07b7b57c12"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[ 1.        ,  1.        ,  1.        , ...,  1.        ,\n",
@@ -242,9 +242,8 @@
               "         0.50472977,  0.07343336]])"
             ]
           },
-          "execution_count": 5,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 8
         }
       ],
       "source": [
@@ -279,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "id": "GoDHo80J_Dr4"
       },
@@ -322,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
         "id": "fFndxbf1_CmR"
       },
@@ -371,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "id": "j1gErN4z_Dr4"
       },
@@ -409,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "id": "RSwKiqIc_Dr5"
       },
@@ -434,13 +433,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "id": "Qe8QYVnP_Dr5"
       },
       "outputs": [],
       "source": [
-        "def gradient(X:numpy.ndarray, T:numpy.ndarray, Y:numpy.ndarray, H:numpy.ndarray, Theta:numpy.ndarray):\n",
+        "def gradient(X, T, Y, H, Theta):\n",
         "  W1, W2 = Theta\n",
         "  \n",
         "  N = X.shape[0]\n",
@@ -474,36 +473,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "QnuFqkg-82l2"
       },
       "outputs": [],
       "source": [
-        "def gradient_descent(X:numpy.ndarray, T, Theta, B, eta=0.001, mu=None):\n",
+        "def gradient_descent(X, T, Theta, B, eta=0.001, mu=None):\n",
         "  loss_values = []\n",
-        "\n",
+        "  momentum = False\n",
         "  max_epochs = 10000\n",
-        "  max_batches = B*max_epochs\n",
+        "  max_batches = 20 #ramon comment: hyperparam we need to play with it\n",
+        "  # raffi: isch max_batches nöd B*max_epochs, will ide exercise slides (9 of 13) staht \"how many batches does this translate to?\" und mir bruuched diä variable nöd mal da\n",
+        "  for i in range(max_epochs):\n",
+        "    # iterate over batches\n",
+        "    # for x,t in batch(X, T, 16): #raffi: wärs da nöd batch(X, T, B)?\n",
+        "    for x,t in batch(X, T, B)[0]:\n",
+        "      # compute network output\n",
+        "      Y, H = network(x, Theta)\n",
+        "      # compute and append loss\n",
+        "      loss_values.append(loss(Y,t))\n",
+        "      # compute gradient\n",
+        "      g1, g2 = gradient(x, t, Y, H, Theta)\n",
+        "      # and apply gradient descent\n",
+        "      lastTheta = Theta\n",
         "\n",
-        "  # iterate over batches\n",
-        "  for x,t in B:\n",
-        "    # compute network output\n",
-        "    y, h = network(X=x, Theta=Theta)\n",
-        "    # compute and append loss\n",
-        "    loss_values.append()\n",
-        "\n",
-        "    # compute gradient\n",
-        "    ...\n",
-        "    # and apply gradient descent\n",
-        "    ...\n",
-        "    \n",
-        "    # apply momentum learning if asked\n",
-        "    if mu:\n",
-        "      pass\n",
+        "      W1 = W1 - (eta * g1)\n",
+        "      W2 = W2 - (eta * g2)\n",
         "      \n",
+        "      Theta = (W1,W2)\n",
+        "      \n",
+        "      # apply momentum learning if asked\n",
+        "      if (momentum):\n",
+        "        W1 = W1 - (eta * g1) + mu(Theta[0] - lastTheta[0])\n",
+        "        W2 = W2 - (eta * g2) + mu(Theta[1] - lastTheta[1])\n",
         "\n",
-        "  # return the obtained loss values at the end\n",
+        "    # return the obtained loss values at the end\n",
         "  return loss_values"
       ]
     },
@@ -525,32 +530,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "r4BnX1m8_Dr6"
+        "id": "r4BnX1m8_Dr6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        },
+        "outputId": "3736ccd9-9273-4014-a8da-0470da62b264"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-a1eddfac1006>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# run gradient descent with full dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mTheta1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mGD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTheta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# run stochastic gradient descent with batches of size 16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-16-a34ab928d5cc>\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(X, T, Theta, B, eta, mu)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# iterate over batches\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m# for x,t in batch(X, T, 16): #raffi: wärs da nöd batch(X, T, B)?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m       \u001b[0;31m# compute network output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m       \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+          ]
+        }
+      ],
       "source": [
-        "K = ...\n",
-        "D = ...\n",
-        "O = ...\n",
-        "W1 = ...\n",
-        "W2 = ...\n",
+        "K = 15\n",
+        "D = X.shape[0]-1\n",
+        "O = T.shape[0]\n",
+        "s_W1 = 1/numpy.sqrt(D)\n",
+        "s_W2 = 1/numpy.sqrt(K)\n",
+        "W1 = numpy.random.uniform(-s_W1,s_W1,(K+1, D+1))\n",
+        "W2 = numpy.random.uniform(-s_W2,s_W2,(O, K+1))\n",
         "Theta = [W1, W2]\n",
         "\n",
         "import copy\n",
         "\n",
         "# run gradient descent with full dataset\n",
         "Theta1 = copy.deepcopy(Theta)\n",
-        "GD = ...\n",
+        "GD = gradient_descent(X, T, Theta, B=X.shape[0])\n",
         "\n",
         "# run stochastic gradient descent with batches of size 16\n",
         "Theta2 = copy.deepcopy(Theta)\n",
-        "SGD = ...\n",
+        "SGD = gradient_descent(X, T, Theta, B=16)\n",
         "\n",
         "# run stochastic gradient descent with batches of size 16 and momentum mu=0.9\n",
         "Theta3 = copy.deepcopy(Theta)\n",
-        "SGD_Mo = ..."
+        "SGD_Mo = gradient_descent(X, T, Theta, B=16, mu=0.9)"
       ]
     },
     {
@@ -704,8 +729,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "interpreter": {
       "hash": "2dd53f8ad749bca69f7250ce75eb4f0def59db5cf79075a9716322ffc58e8a2e"
@@ -725,7 +750,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.8.10"
     },
     "orig_nbformat": 4
   },
