:poop: Task 7 & 8 are there but go for infinity

--- a/DL_Assignment04.ipynb
+++ b/DL_Assignment04.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/raffi07/deep-learning-fs23/blob/main/DL_Assignment04.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "wE3DlW-e_Dr1"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,8 +180,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loaded dataset with 3 samples\n"
           ]
@@ -214,17 +214,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
-        "id": "0bUpUAHR_Dr3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "0bUpUAHR_Dr3",
         "outputId": "30fc29c4-0311-4681-ee1f-4f07b7b57c12"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[ 1.        ,  1.        ,  1.        , ...,  1.        ,\n",
@@ -242,8 +241,9 @@
               "         0.50472977,  0.07343336]])"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 4,
       "metadata": {
         "id": "GoDHo80J_Dr4"
       },
@@ -321,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "id": "fFndxbf1_CmR"
       },
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "metadata": {
         "id": "j1gErN4z_Dr4"
       },
@@ -385,8 +385,8 @@
         "  A = numpy.dot(W1,X)\n",
         "\n",
         "  # compute hidden unit output\n",
-        "  H_ = logistic(A)\n",
-        "  H = numpy.concatenate(([1], H_))\n",
+        "  H = logistic(A)\n",
+        "  # H = numpy.concatenate((numpy.full((1, A.shape[1]), 1), H_))\n",
         "\n",
         "  # compute network output\n",
         "  Y = numpy.dot(W2, H)\n",
@@ -408,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "metadata": {
         "id": "RSwKiqIc_Dr5"
       },
@@ -433,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 18,
       "metadata": {
         "id": "Qe8QYVnP_Dr5"
       },
@@ -473,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 19,
       "metadata": {
         "id": "QnuFqkg-82l2"
       },
@@ -481,14 +481,15 @@
       "source": [
         "def gradient_descent(X, T, Theta, B, eta=0.001, mu=None):\n",
         "  loss_values = []\n",
-        "  momentum = False\n",
+        "  # momentum = False #raffi: ich glaube mir chönd das efach über if mu: mache\n",
         "  max_epochs = 10000\n",
         "  max_batches = 20 #ramon comment: hyperparam we need to play with it\n",
         "  # raffi: isch max_batches nöd B*max_epochs, will ide exercise slides (9 of 13) staht \"how many batches does this translate to?\" und mir bruuched diä variable nöd mal da\n",
         "  for i in range(max_epochs):\n",
         "    # iterate over batches\n",
         "    # for x,t in batch(X, T, 16): #raffi: wärs da nöd batch(X, T, B)?\n",
-        "    for x,t in batch(X, T, B)[0]:\n",
+        "    batch_data = batch(X, T, B)\n",
+        "    for (x, t, _) in batch_data:\n",
         "      # compute network output\n",
         "      Y, H = network(x, Theta)\n",
         "      # compute and append loss\n",
@@ -497,6 +498,8 @@
         "      g1, g2 = gradient(x, t, Y, H, Theta)\n",
         "      # and apply gradient descent\n",
         "      lastTheta = Theta\n",
+        "      \n",
+        "      W1, W2 = Theta\n",
         "\n",
         "      W1 = W1 - (eta * g1)\n",
         "      W2 = W2 - (eta * g2)\n",
@@ -504,7 +507,8 @@
         "      Theta = (W1,W2)\n",
         "      \n",
         "      # apply momentum learning if asked\n",
-        "      if (momentum):\n",
+        "      # if (momentum): \n",
+        "      if mu:\n",
         "        W1 = W1 - (eta * g1) + mu(Theta[0] - lastTheta[0])\n",
         "        W2 = W2 - (eta * g2) + mu(Theta[1] - lastTheta[1])\n",
         "\n",
@@ -530,26 +534,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 20,
       "metadata": {
-        "id": "r4BnX1m8_Dr6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 356
         },
+        "id": "r4BnX1m8_Dr6",
         "outputId": "3736ccd9-9273-4014-a8da-0470da62b264"
       },
       "outputs": [
         {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
           "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-a1eddfac1006>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# run gradient descent with full dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mTheta1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mGD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTheta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# run stochastic gradient descent with batches of size 16\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-16-a34ab928d5cc>\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(X, T, Theta, B, eta, mu)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# iterate over batches\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;31m# for x,t in batch(X, T, 16): #raffi: wärs da nöd batch(X, T, B)?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m       \u001b[0;31m# compute network output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m       \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[20], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[39m# run gradient descent with full dataset\u001b[39;00m\n\u001b[0;32m     13\u001b[0m Theta1 \u001b[39m=\u001b[39m copy\u001b[39m.\u001b[39mdeepcopy(Theta)\n\u001b[1;32m---> 14\u001b[0m GD \u001b[39m=\u001b[39m gradient_descent(X, T, Theta, B\u001b[39m=\u001b[39;49mX\u001b[39m.\u001b[39;49mshape[\u001b[39m0\u001b[39;49m])\n\u001b[0;32m     16\u001b[0m \u001b[39m# run stochastic gradient descent with batches of size 16\u001b[39;00m\n\u001b[0;32m     17\u001b[0m Theta2 \u001b[39m=\u001b[39m copy\u001b[39m.\u001b[39mdeepcopy(Theta)\n",
+            "Cell \u001b[1;32mIn[19], line 13\u001b[0m, in \u001b[0;36mgradient_descent\u001b[1;34m(X, T, Theta, B, eta, mu)\u001b[0m\n\u001b[0;32m     10\u001b[0m batch_data \u001b[39m=\u001b[39m batch(X, T, B)\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m (x, t, _) \u001b[39min\u001b[39;00m batch_data:\n\u001b[0;32m     12\u001b[0m   \u001b[39m# compute network output\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m   Y, H \u001b[39m=\u001b[39m network(x, Theta)\n\u001b[0;32m     14\u001b[0m   \u001b[39m# compute and append loss\u001b[39;00m\n\u001b[0;32m     15\u001b[0m   loss_values\u001b[39m.\u001b[39mappend(loss(Y,t))\n",
+            "Cell \u001b[1;32mIn[16], line 7\u001b[0m, in \u001b[0;36mnetwork\u001b[1;34m(X, Theta)\u001b[0m\n\u001b[0;32m      4\u001b[0m   \u001b[39mreturn\u001b[39;00m \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m (\u001b[39m1\u001b[39m\u001b[39m+\u001b[39mnumpy\u001b[39m.\u001b[39mexp(\u001b[39m-\u001b[39mx))\n\u001b[0;32m      6\u001b[0m \u001b[39m# compute activation\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m A \u001b[39m=\u001b[39m numpy\u001b[39m.\u001b[39;49mdot(W1,X)\n\u001b[0;32m      9\u001b[0m \u001b[39m# compute hidden unit output\u001b[39;00m\n\u001b[0;32m     10\u001b[0m H \u001b[39m=\u001b[39m logistic(A)\n",
+            "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -729,8 +735,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "interpreter": {
       "hash": "2dd53f8ad749bca69f7250ce75eb4f0def59db5cf79075a9716322ffc58e8a2e"
@@ -750,7 +756,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.11.1"
     },
     "orig_nbformat": 4
   },
